<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="termux"
        app:title="@string/termux_preferences_title"
        app:summary="@string/termux_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.TermuxPreferencesFragment"/>

    <Preference
        app:key="look_and_feel"
        app:title="@string/termux_style_preferences_title"
        app:summary="@string/termux_style_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.termux.TermuxStylePreferencesFragment"/>

    <Preference
        app:key="shizuku"
        app:title="@string/termux_privileged_access_preferences_title"
        app:summary="@string/termux_privileged_access_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.termux.PrivilegedAccessPreferencesFragment"/>

    <Preference
        app:key="termux_ai"
        app:title="@string/termux_ai_preferences_title"
        app:summary="@string/termux_ai_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.termux.TaiPreferencesFragment"/>

    <Preference
        app:key="apps_bar"
        app:title="@string/termux_launcher_preferences_title"
        app:summary="@string/termux_launcher_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.termux.LauncherPreferencesFragment"/>

    <Preference
        app:key="permissions"
        app:title="@string/termux_app_launcher_permissions_title"
        app:summary="@string/termux_app_launcher_permissions_summary"
        app:fragment="com.termux.app.fragments.settings.termux.LauncherPermissionsPreferencesFragment"/>

    <Preference
        app:key="termux_api"
        app:title="@string/termux_api_preferences_title"
        app:summary="@string/termux_api_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxAPIPreferencesFragment"/>

    <Preference
        app:key="termux_float"
        app:title="@string/termux_float_preferences_title"
        app:summary="@string/termux_float_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxFloatPreferencesFragment"/>

    <Preference
        app:key="termux_tasker"
        app:title="@string/termux_tasker_preferences_title"
        app:summary="@string/termux_tasker_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxTaskerPreferencesFragment"/>

    <Preference
        app:key="termux_gui"
        app:title="@string/termux_gui_preferences_title"
        app:summary="@string/termux_gui_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxGUIPreferencesFragment"/>

    <Preference
        app:key="termux_widget"
        app:title="@string/termux_widget_preferences_title"
        app:summary="@string/termux_widget_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxWidgetPreferencesFragment"/>

    <Preference
        app:key="about"
        app:title="@string/about_preference_title"
        app:persistent="false"/>

    <Preference
        app:key="donate"
        app:title="@string/donate_preference_title"
        app:persistent="false"
        app:isPreferenceVisible="false"/>

</PreferenceScreen>
