<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/termux_ai_overview_header">
        <Preference
            app:key="tai_model_privacy_notice"
            app:title="@string/termux_ai_model_privacy_notice_title"
            app:persistent="false"
            app:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/termux_ai_runtime_control_header">
        <Preference
            app:key="tai_runtime_status"
            app:title="@string/termux_ai_runtime_status_title"
            app:summary="@string/termux_ai_runtime_status_summary"
            app:persistent="false"
            app:selectable="false"/>
        <Preference
            app:key="tai_runtime_load"
            app:title="@string/termux_ai_runtime_load_title"
            app:summary="@string/termux_ai_runtime_load_summary"
            app:persistent="false"/>
        <Preference
            app:key="tai_runtime_keep_warm"
            app:title="@string/termux_ai_runtime_keep_warm_title"
            app:summary="@string/termux_ai_runtime_keep_warm_summary"
            app:persistent="false"/>
        <Preference
            app:key="tai_runtime_cancel"
            app:title="@string/termux_ai_runtime_cancel_title"
            app:summary="@string/termux_ai_runtime_cancel_summary"
            app:persistent="false"/>
        <Preference
            app:key="tai_runtime_unload"
            app:title="@string/termux_ai_runtime_unload_title"
            app:summary="@string/termux_ai_runtime_unload_summary"
            app:persistent="false"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/termux_ai_model_roles_header">
        <ListPreference
            app:key="tai_role_default_assistant"
            app:title="@string/termux_ai_default_assistant_model_title"
            app:entries="@array/termux_ai_model_entries"
            app:entryValues="@array/termux_ai_model_values"
            app:defaultValue="Gemma-4-E2B-it"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="tai_models_category"
        app:title="@string/termux_ai_models_header">
        <EditTextPreference
            app:key="tai_huggingface_token"
            app:title="@string/termux_ai_huggingface_token_title"
            app:dialogTitle="@string/termux_ai_huggingface_token_title"
            app:summary="@string/termux_ai_huggingface_token_summary"/>
        <Preference
            app:key="tai_model_import"
            app:title="@string/termux_ai_model_import_title"
            app:summary="@string/termux_ai_model_import_summary"
            app:persistent="false"/>
        <Preference
            app:key="tai_models_refresh"
            app:title="@string/termux_ai_models_refresh_title"
            app:summary="@string/termux_ai_models_refresh_summary"
            app:persistent="false"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/termux_ai_runtime_header">
        <ListPreference
            app:key="tai_max_tokens"
            app:title="@string/termux_ai_max_tokens_title"
            app:entries="@array/termux_ai_max_tokens_entries"
            app:entryValues="@array/termux_ai_max_tokens_values"
            app:defaultValue="auto"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            app:key="tai_top_k"
            app:title="@string/termux_ai_top_k_title"
            app:entries="@array/termux_ai_top_k_entries"
            app:entryValues="@array/termux_ai_top_k_values"
            app:defaultValue="auto"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            app:key="tai_top_p"
            app:title="@string/termux_ai_top_p_title"
            app:entries="@array/termux_ai_top_p_entries"
            app:entryValues="@array/termux_ai_top_p_values"
            app:defaultValue="auto"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            app:key="tai_temperature"
            app:title="@string/termux_ai_temperature_title"
            app:entries="@array/termux_ai_temperature_entries"
            app:entryValues="@array/termux_ai_temperature_values"
            app:defaultValue="auto"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            app:key="tai_accelerator"
            app:title="@string/termux_ai_accelerator_title"
            app:entries="@array/termux_ai_accelerator_entries"
            app:entryValues="@array/termux_ai_accelerator_values"
            app:defaultValue="auto"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            app:key="tai_thinking"
            app:title="@string/termux_ai_thinking_title"
            app:entries="@array/termux_ai_auto_boolean_entries"
            app:entryValues="@array/termux_ai_auto_boolean_values"
            app:defaultValue="auto"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            app:key="tai_speculative_decoding"
            app:title="@string/termux_ai_speculative_decoding_title"
            app:entries="@array/termux_ai_auto_boolean_entries"
            app:entryValues="@array/termux_ai_auto_boolean_values"
            app:defaultValue="auto"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            app:key="tai_idle_unload_minutes"
            app:title="@string/termux_ai_idle_unload_title"
            app:entries="@array/termux_ai_idle_unload_entries"
            app:entryValues="@array/termux_ai_idle_unload_values"
            app:defaultValue="10"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/termux_ai_prompts_header">
        <EditTextPreference
            app:key="tai_system_prompt_general"
            app:title="@string/termux_ai_general_prompt_title"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/termux_ai_capabilities_header">
        <Preference
            app:key="tai_endpoint_notice"
            app:title="@string/termux_ai_endpoint_notice_title"
            app:summary="@string/termux_ai_endpoint_notice_summary"
            app:persistent="false"/>
    </PreferenceCategory>
</PreferenceScreen>
