<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="apps_bar_primary"
        app:title="@string/termux_app_launcher_header">

        <SwitchPreferenceCompat
            app:key="app_launcher_apps_row_enabled"
            app:title="@string/termux_app_launcher_apps_row_enabled_title"
            app:summary="@string/termux_app_launcher_apps_row_enabled_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="app_launcher_az_row_enabled"
            app:title="@string/termux_app_launcher_az_row_enabled_title"
            app:dependency="app_launcher_apps_row_enabled"
            android:defaultValue="false" />

        <ListPreference
            app:key="app_launcher_az_lock_method"
            app:title="@string/termux_app_launcher_az_double_tap_lock_title"
            app:summary="@string/termux_app_launcher_az_double_tap_lock_summary"
            android:defaultValue="off"
            app:entries="@array/app_launcher_az_lock_method_entries"
            app:entryValues="@array/app_launcher_az_lock_method_values" />

        <Preference
            app:key="app_launcher_set_home"
            app:title="@string/termux_app_launcher_set_home_title"
            app:summary="@string/termux_app_launcher_set_home_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="apps_bar_search"
        app:title="@string/termux_app_launcher_search_header">

        <ListPreference
            app:key="app_launcher_search_mode"
            app:title="@string/termux_app_launcher_search_mode_title"
            android:defaultValue="balanced"
            app:entries="@array/app_launcher_search_mode_entries"
            app:entryValues="@array/app_launcher_search_mode_values" />

        <EditTextPreference
            app:key="app_launcher_input_char"
            app:title="@string/termux_app_launcher_input_char_title"
            app:summary="@string/termux_app_launcher_input_char_summary"
            android:defaultValue="%"
            android:inputType="text" />

        <Preference
            app:key="app_launcher_reset_usage_ranking"
            app:title="@string/termux_app_launcher_reset_usage_ranking_title"
            app:summary="@string/termux_app_launcher_reset_usage_ranking_summary" />
    </PreferenceCategory>

</PreferenceScreen>
