<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="app_launcher_bw_icons"
        app:title="@string/termux_app_launcher_bw_icons_title"
        app:summary="@string/termux_app_launcher_bw_icons_summary"
        android:defaultValue="false" />

    <Preference
        app:key="app_launcher_icon_pack_package"
        app:title="@string/termux_app_launcher_icon_pack_title"
        app:summary="@string/termux_app_launcher_icon_pack_summary" />

    <Preference
        app:key="app_launcher_pinned_icon_pack_package"
        app:title="@string/termux_app_launcher_pinned_icon_pack_title"
        app:summary="@string/termux_app_launcher_pinned_icon_pack_summary" />

</PreferenceScreen>
