<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.termux.app.fragments.settings.PillPreference
        app:key="app_launcher_storage_access"
        app:title="@string/termux_app_launcher_storage_access_title" />

    <com.termux.app.fragments.settings.PillPreference
        app:key="app_launcher_notification_access"
        app:title="@string/termux_app_launcher_notification_access_settings_title" />

    <com.termux.app.fragments.settings.PillPreference
        app:key="app_launcher_accessibility_lock_access"
        app:title="@string/termux_app_launcher_accessibility_lock_access_title" />

    <com.termux.app.fragments.settings.PillPreference
        app:key="app_launcher_notification_settings"
        app:title="@string/termux_app_launcher_notification_settings_title" />

    <Preference
        app:key="app_launcher_app_permissions"
        app:title="@string/termux_app_launcher_app_permissions_title"
        app:summary="@string/termux_app_launcher_app_permissions_summary" />

</PreferenceScreen>
