<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="termux_screen"
        app:title="@string/termux_screen_preferences_title">

        <SwitchPreferenceCompat
            app:key="fullscreen"
            app:title="@string/termux_fullscreen_title"
            app:summary="@string/termux_fullscreen_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            app:key="terminal_flush_dock"
            app:title="@string/termux_terminal_flush_dock_title"
            app:summary="@string/termux_terminal_flush_dock_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>
